# hd-ed25519

./: Cargo.toml  README.md
src/: dup.rs  lib.rs
