[package]
name = "hd-ed25519"
version = "0.0.1"
authors = ["Jeff Burdges <jeff@web3.foundation>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/w3f/hd-ed25519"
categories = ["cryptography"] # "no-std"
keywords = ["cryptography", "curve25519", "ECC"]
description = "Hierachical key derivation on ed255190-dalek"


[dependencies.ed25519-dalek]
version = "1"
default-features = false

[dependencies.curve25519-dalek]
version = "3"
default-features = false

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.serde]
version = "^1.0"
optional = true

[dependencies.clear_on_drop]
version = "0.2"

[dev-dependencies]
sha2 = "^0.9"

[features]
default = ["dalek-rand", "std", "u64_backend"]
dalek-rand = ["ed25519-dalek/rand"]
# We don't add "rand/std" here because it would enable a bunch of Fuchsia dependencies.
std = ["curve25519-dalek/std", "rand/std"]
alloc = ["curve25519-dalek/alloc"]
# nightly = ["curve25519-dalek/nightly", "rand/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend","ed25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend","ed25519-dalek/u32_backend"]
simd_backend = ["curve25519-dalek/simd_backend","ed25519-dalek/simd_backend"]

